--- a/index.html
+++ b/index.html
@@ -5,8 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="game.js"></script>
     <title>Rock Paper Scissors</title>
+    <style>
+        h1{
+            text-align: center;
+            color: blueviolet;
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        }
+    </style>
 </head>
 <body>
-    
+   <h1>Rock, Paper, or Scissors?</h1> 
 </body>
 </html>
