--- a/index.html
+++ b/index.html
@@ -3,17 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="game.js"></script>
+    <link rel="stylesheet" href="style.css">
     <title>Rock Paper Scissors</title>
-    <style>
-        h1{
-            text-align: center;
-            color: blueviolet;
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-        }
-    </style>
 </head>
 <body>
-   <h1>Rock, Paper, or Scissors?</h1> 
+   <h1>Rock, Paper, or Scissors?</h1>
+   <div class="outcome"></div>
+   <div class="results"></div>
+   <div class="main-game">
+    <button class="rock">Rock</button>
+    <button class="paper">Paper</button>
+    <button class="scissors">Scissors</button>
+   </div>
+   <script src="game.js"></script>
 </body>
 </html>
