Improve the GUI for the game

--- a/index.html
+++ b/index.html
@@ -7,14 +7,21 @@
     <title>Rock Paper Scissors</title>
 </head>
 <body>
-   <h1>Rock, Paper, or Scissors?</h1>
-   <div class="outcome"></div>
-   <div class="results"></div>
-   <div class="main-game">
-    <button class="rock">Rock</button>
-    <button class="paper">Paper</button>
-    <button class="scissors">Scissors</button>
-   </div>
+    <h1>Rock, Paper, or Scissors?</h1>
+    <div class="results"></div>
+    <div class="main-game">
+        <div class="human">
+            <button class="rock">Rock</button>
+            <button class="paper">Paper</button>
+            <button class="scissors">Scissors</button>
+        </div>
+        <div class="computer">
+            <button class="c-rock">Rock</button>
+            <button class="c-paper">Paper</button>
+            <button class="c-scissors">Scissors</button>
+        </div>
+    </div>
+    <div class="outcome"></div>
    <script src="game.js"></script>
 </body>
 </html>
